# QPaw

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/superpowers/plans/: 2026-05-25-chat-service-refactor.md  2026-05-25-storage-records-split.md  2026-05-26-storage-basic-modules-split.md  2026-05-26-storage-working-memory-split.md  2026-05-28-codex-cli-llm-provider.md  2026-05-28-explicit-memory-recall.md  (+2 more)
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: avatar.rs  chat.rs  codex_dev.rs  commands.rs  debug.rs  error.rs  idle.rs  interruptibility.rs  lib.rs  llm.rs  llm_timeout_tests.rs  main.rs  memory_decision.rs  models.rs  notification.rs  reminders.rs  storage.rs
src-tauri/src/memory/: consolidator.rs  explicit.rs  mod.rs  prompts.rs  retriever.rs  store.rs  working.rs
src-tauri/src/storage/: conversation.rs  explicit_memory.rs  records.rs  reminder_events.rs  settings.rs  working_memory.rs
src/components/: ChatPanel.test.tsx  ChatPanel.tsx  ControlButton.tsx  Live2DAvatar.tsx  MemoryPanel.tsx  PetWindow.test.tsx  PetWindow.tsx  PixiNightCatAvatar.test.tsx  PixiNightCatAvatar.tsx  PlaceholderPet.test.tsx  PlaceholderPet.tsx  ReminderBubble.tsx  ResizeHandles.tsx  SettingsWindow.test.tsx  SettingsWindow.tsx  StaticAvatar.test.tsx  StaticAvatar.tsx
src/lib/: debug.ts  fallback.ts  llmProviderSettings.test.ts  llmProviderSettings.ts  reminderPolicy.test.ts  reminderPolicy.ts  tauri.ts  types.ts
src/types/: pixi-live2d-display.d.ts
(+4 files in other folders)
