[package]
name = "qpaw"
version = "0.1.0"
description = "A low-interruption desktop pet for reminders and LLM-backed memory."
authors = ["QPaw"]
edition = "2021"

[lib]
name = "qpaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "2.0.3", default-features = false, features = ["kv-surrealkv"] }
tauri = { version = "2.11.2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2.7.1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation"] }
